[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/snake_proj.png" type="Texture" id=1]
[ext_resource path="res://Scripts/snake_proj.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.61141, 4.87739 )

[node name="poison_proj" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Weapon_Timeout" type="Timer" parent="."]

[node name="reload_timer" type="Timer" parent="."]
wait_time = 0.001

[connection signal="body_entered" from="." to="." method="_on_poison_proj_body_entered"]
[connection signal="timeout" from="Weapon_Timeout" to="." method="_on_Weapon_Timeout_timeout"]
[connection signal="timeout" from="reload_timer" to="." method="_on_reload_timer_timeout"]
